--- a/_01_ambassador/.env.example
+++ b/_01_ambassador/.env.example
@@ -4,6 +4,8 @@ APP_KEY=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
 APP_URL=http://localhost
+SANCTUM_STATEFUL_DOMAINS=
+API_PORT=
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
