--- a/02_vue_admin/package.json
+++ b/02_vue_admin/package.json
@@ -1,36 +1,32 @@
 {
-  "name": "02_vue_admin",
-  "version": "0.0.0",
+  "name": "vue-admin",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vite preview",
-    "build": "vite build",
-    "build-only": "vite build",
-    "dev": "vite",
-    "preview": "vite preview",
-    "type-check": "vue-tsc --build --force"
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build"
   },
   "dependencies": {
-    "@mdi/font": "5.9.55",
-    "roboto-fontface": "*",
-    "vue": "^3.5.12",
-    "vue-router": "^4.4.5",
-    "vuetify": "^3.0.0-beta.0",
-    "vuex": "^4.0.2",
-    "webfontloader": "^1.0.0"
+    "axios": "^0.21.1",
+    "core-js": "^3.6.5",
+    "vue": "^2.6.11",
+    "vue-class-component": "^7.2.3",
+    "vue-property-decorator": "^9.1.2",
+    "vue-router": "^3.2.0",
+    "vuetify": "^2.4.0",
+    "vuex": "^3.4.0"
   },
   "devDependencies": {
-    "@tsconfig/node20": "^20.1.4",
-    "@types/node": "^20.17.0",
-    "@types/webfontloader": "^1.0.0",
-    "@vitejs/plugin-vue": "^4.3.4",
-    "@vue/tsconfig": "^0.5.1",
-    "npm-run-all2": "^7.0.1",
-    "typescript": "~5.6.0",
-    "vite": "^4.5.5",
-    "vite-plugin-vuetify": "^1.0.0-alpha.12",
-    "vue-cli-plugin-vuetify": "~2.5.8",
-    "vue-tsc": "^2.1.6"
-  },
-  "type": "module"
+    "@vue/cli-plugin-babel": "~4.5.0",
+    "@vue/cli-plugin-router": "~4.5.0",
+    "@vue/cli-plugin-typescript": "~4.5.0",
+    "@vue/cli-plugin-vuex": "~4.5.0",
+    "@vue/cli-service": "~4.5.0",
+    "sass": "^1.32.0",
+    "sass-loader": "^10.0.0",
+    "typescript": "~4.1.5",
+    "vue-cli-plugin-vuetify": "~2.3.1",
+    "vue-template-compiler": "^2.6.11",
+    "vuetify-loader": "^1.7.0"
+  }
 }
