--- a/admin_fronent_vue/package.json
+++ b/admin_fronent_vue/package.json
@@ -24,6 +24,7 @@
     "@types/node": "^20.17.0",
     "@types/webfontloader": "^1.0.0",
     "@vitejs/plugin-vue": "^5.1.4",
+    "@vue/compiler-sfc": "^3.5.12",
     "@vue/tsconfig": "^0.5.1",
     "npm-run-all2": "^7.0.1",
     "typescript": "~5.6.0",
