--- a/01_ambassador_app_api/.env.example
+++ b/01_ambassador_app_api/.env.example
@@ -26,7 +26,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=_01_ambassador
+DB_DATABASE=ambassador
 DB_USERNAME=root
 DB_PASSWORD=
 
